--- a/src/main/webapp/pages/index.xhtml
+++ b/src/main/webapp/pages/index.xhtml
@@ -5,21 +5,20 @@
 	xmlns:h="http://java.sun.com/jsf/html"     
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:spring="http://www.springframework.org/tags">
 
 <h:head>
  <title>JAVA BASE CODE BETA 1.0</title>
 	
-	<link rel="stylesheet" href="css/stylesheet.css" />
-	<link rel="stylesheet" href="css/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/styles.css" />
+	<link rel="stylesheet" href="lib/css/bootstrap.min.css" />
 	<link rel="stylesheet" href="css/media-queries.css" />
-	<link rel="stylesheet" href="img/favicon.ico" />
 	
-	<script src="js/jquery-1.10.1.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
+	<script src="lib/js/jquery-1.10.1.min.js"></script>
+	<script src="lib/js/bootstrap.min.js"></script>
 	<script src="js/common.js"></script>
-	<script src="js/jquery.blockUI.js"></script>
+	<script src="lib/js/jquery.blockUI.js"></script>
 	
   <meta name="viewport" content="width=device-width" />
  
@@ -29,7 +28,7 @@
 <body id="login">
 <f:view locale="#{sessionScope['sessionLocale'] != null ? sessionScope['sessionLocale'] : 'en_US'}">
 	<div class="container">
-		<h4 style="background: white;">JAVA BASE CODE BETA 1.0</h4>
+		<h4 style="background: white;"><spring:message code="label.appname"/></h4>
 		
 		<ul class="nav nav-tabs">
 			<li class="active" id="lnk_home"><a href="/SoaBaseCode/">Home</a></li>
@@ -40,14 +39,30 @@
 		<div id="tab-content" style="width:400px;">
 		
 			<div class="alert" id="alert-area"></div>
-		
+			
+			<input type="text" id="uid" class="form-control" placeholder="Desired User Name"></input>
+			<br />		
 			<input type="text" id="fname" class="form-control" placeholder="First Name"></input>
 			<br />
-			<input type="text" id="lname" class="form-control" placeholder="Las Name"></input>
+			<input type="text" id="lname" class="form-control" placeholder="Last Name"></input>
+			<br />
+			
+			<span class="label label-info">Gender</span>
+			<div class="btn-group" data-toggle="buttons-radio">
+			    <button id="btn-male" type="button" class="btn btn-default active">Male</button>
+			    <button id="btn-female" type="button" class="btn btn-default">Female</button>
+			</div>
+			<br />
+			<br />
+			<input type="number" id="age" class="form-control" placeholder="Age"></input><span id="age-err-msg" class="label label-warning"></span>
+			<br />
+			
 			<br />
 			<button id="save-btn" class='btn btn-default'>Save</button>
-			<button id="search-btn" class='btn btn-default'>Search</button>
+			<button id="search-btn" class='btn btn-default'>Search by User ID</button>
 			<button id="search-all-btn" class='btn btn-default'>Search All</button>
+
+
 
 			<div>
 				<br />
